<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backgroundDetail"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/atas"
    tools:context=".ui.DetailActivity">

    <TextView
        android:id="@+id/tv_nameDetail"
        style="@style/fontBolt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_detail"
        app:layout_constraintEnd_toEndOf="@+id/iv_photoDetail"
        app:layout_constraintStart_toStartOf="@+id/iv_photoDetail"
        app:layout_constraintTop_toBottomOf="@+id/iv_photoDetail" />

    <TextView
        android:id="@+id/tv_usernameDetail"
        style="@style/fontRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/tv_nameDetail"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/tv_nameDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameDetail" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/tv_followingDetail"
        style="@style/fontBolt14"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/following"
        app:drawableStartCompat="@drawable/ic_followers_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/iv_photoDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_locationDetail" />

    <TextView
        android:id="@+id/tv_followersDetail"
        style="@style/fontBolt14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/followers"
        app:drawableStartCompat="@drawable/ic_followers_24"
        app:layout_constraintEnd_toStartOf="@+id/iv_photoDetail"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_locationDetail" />

    <TextView
        android:id="@+id/tv_locationDetail"
        style="@style/fontRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        app:drawableStartCompat="@drawable/ic_location_24"
        app:layout_constraintEnd_toEndOf="@+id/tv_usernameDetail"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/tv_usernameDetail"
        app:layout_constraintTop_toBottomOf="@+id/tv_usernameDetail" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        style="@style/background"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        style="@style/textStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tab_follow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_followersDetail"
        app:tabPaddingEnd="10dp"
        app:tabPaddingStart="10dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_photoDetail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/favorite"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchor="@id/view_pager"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:srcCompat="@drawable/ic_favorite_24" />

</androidx.constraintlayout.widget.ConstraintLayout>